# cloudpss-skillport

./: .gitignore  CLAUDE.md  README.md  SKILL.md  cloudpss-sim-v2.skill  pyproject.toml
.gitlab/: MR_DESCRIPTION.md
.playwright-mcp/: page-2026-04-15T07-15-51-815Z.yml
configs/: power_flow_20260326_090223.yaml  power_flow_20260326_103845.yaml
docs/: DEVELOPMENT_GUIDE.md  cloudpss-toolkit-schema-audit-issue.md  cloudpss-toolkit-schema-audit-report.md  cloudpss_toolkit_defects_report.md
docs/dev-requirements/: visualize-pipeline-support.md
evals/: evals.json
plans/: agile-moseying-forest.md  pipeline-ui-enhancement.md
references/: config-reference.md  usage-guide.md
scripts/: channel_helper.py  component_mapper.py  friendly_validator.py  fuzzy_matcher.py  generate_config.py  interactive_wizard.py  smart_config.py
tests/: __init__.py  conftest.py  test_boundary_conditions.py  test_config_schema_validity.py  test_e2e_scenarios.py  test_favorites.py  test_frontend_e2e.py  test_mocked_execution.py  test_parameter_extraction.py  test_pipeline_features.py  test_skill_detection.py  test_skill_examples.py  test_viz_skill.py
tests/e2e/: FINAL_TEST_REPORT.md  FIXES_SUMMARY.md  PR_REQUIREMENTS.md  PR_REQUIREMENTS_V2.md  TEST_REPORT_SUMMARY.md  batch_test_all_skills.py  test_all_skills.py
tests/e2e/reports/: full_test_report.html  full_test_report.json  (+2 more)
web/: __init__.py  app.py
web/components/: pipeline_editor.py  settings.py  task_create.py  task_list.py  task_results.py  viz_skill.py
web/core/: favorites.py  skill_catalog.py  task_executor.py  task_store.py
(+9 files in other folders)
